# MicrateLauncher

./: .gitignore  README.md  compile.bat  index.html  main.py  make.bat  package-lock.json  package.json  start.bat  tailwind.config.js
Micrate_Launcher_Lib/: Lang.py  Micrate_Launcher.py  __init__.py
Micrate_Launcher_Lib/Lib/: Lang.py  Lib.py  Profile.py  Session.py  Version.py  __init__.py  jdk.py
Micrate_Launcher_Lib/Lib/Mcl_lib/: __init__.py  account.py  command.py  helper.py  install.py  natives.py  utils.py
Micrate_Launcher_Lib/windows/: ConfigMenu.py  DataMenu.py  LoadingBar.py  MainMenu.py  ProfileMenu.py  SessionMenu.py  Useless.py  VersionMenu.py  Windows.py  __init__.py
Ressources/lang/: en_US.json  fr_FR.json
docs/: Micrate_Launcher_Lib.html  index.html  search.js
docs/Micrate_Launcher_Lib/: Lang.html  Lib.html  Micrate_Launcher.html  windows.html
docs/Micrate_Launcher_Lib/Lib/: Lang.html  Lib.html  MM1_Lib.html  Mcl_lib.html  Profile.html  Session.html  Version.html  jdk.html
docs/Micrate_Launcher_Lib/Lib/MM1_Lib/: encode.html  folders.html
docs/Micrate_Launcher_Lib/Lib/Mcl_lib/: account.html  command.html  helper.html  (+3 more)
docs/Micrate_Launcher_Lib/windows/: ConfigMenu.html  DataMenu.html  Lang.html  LoadingBar.html  MainMenu.html  ProfileMenu.html  SessionMenu.html  Useless.html  VersionMenu.html  Windows.html
interface/: meson.build
interface/src/include/: kb_lib_class.hpp  kb_lib_core.hpp  kb_lib_kromblast.hpp
src/: connection_set.html  home.html  loading.html  profile.html  session-version-config.html  styles.css
src/img/: Credit.txt
